--- a/index.html
+++ b/index.html
@@ -2,19 +2,21 @@
 <html lang="en">
     <head>
         <meta charset ="UTF-8">
+        <meta name = "viewport" content="width=device-width", initial-scale="1.0">
         <title>Flowers!</title>
         <link rel ="stylesheet" href="style.css"> 
     </head>
     <body>
-    
-        <h1>"A rose speaks the language of love, with every petal a whisper of the heart."</h1>
+        <div class="box">
+            <h1>"A rose speaks the language of love, with every petal a whisper of the heart."</h1>
 
-        <p>The tradition of giving roses dates back thousands of years, symbolizing love, beauty, and emotion. 
+            <p>The tradition of giving roses dates back thousands of years, symbolizing love, beauty, and emotion. 
             In ancient Greece and Rome, roses were associated with the goddess Aphrodite (Venus in Roman mythology), 
             representing love and passion. Over time, roses became a symbol of romance and affection in many cultures,
              especially during the Victorian era, when the language of flowers (floriography) flourished. 
              Different colors of roses also came to symbolize various emotions—red for love, white for purity, 
              yellow for friendship, and pink for admiration.
             </p>
+            </div>
     </body>
 </html>
