--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
              Different colors of roses also came to symbolize various emotions—red for love, white for purity, 
              yellow for friendship, and pink for admiration.
             </p>
+                <video width="600" controls autoplay loop muted>
+                    <source src="pinkrose.mp4" type="video/mp4">
+                </video>
+
             </div>
     </body>
 </html>
