Adding another div .boxy

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     </head>
     <body>
         <div class="box">
+                <div class="boxy">
             <h1>"A rose speaks the language of love, with every petal a whisper of the heart."</h1>
 
             <p>The tradition of giving roses dates back thousands of years, symbolizing love, beauty, and emotion. 
@@ -17,10 +18,10 @@
              Different colors of roses also came to symbolize various emotions—red for love, white for purity, 
              yellow for friendship, and pink for admiration.
             </p>
-                <video width="600" controls autoplay loop muted>
-                    <source src="pinkrose.mp4" type="video/mp4">
-                </video>
-
-            </div>
+                </div>
+                    <video id ="vid" width="600" controls autoplay loop muted>
+                        <source src="pinkrose.mp4" type="video/mp4">
+                    </video>
+        </div>
     </body>
 </html>
