Added new heading

--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
         <link rel ="stylesheet" href="style.css"> 
     </head>
     <body>
+        <div class ="prebox">
+            <h1>roses</h1>
+        </div>
         <div class="box">
                 <div class="boxy">
-            <h1>"A rose speaks the language of love, with every petal a whisper of the heart."</h1>
+            <h2>"A rose speaks the language of love, with every petal a whisper of the heart."</h2>
 
             <p>The tradition of giving roses dates back thousands of years, symbolizing love, beauty, and emotion. 
             In ancient Greece and Rome, roses were associated with the goddess Aphrodite (Venus in Roman mythology), 
@@ -23,5 +26,23 @@
                         <source src="pinkrose.mp4" type="video/mp4">
                     </video>
         </div>
+        <div class="images">
+            <div onclick="window.location.href='diffroses/red.html'">
+                <img id="cute" src="images/red.jpg" alt="Image of Red Rose"/>
+             </div>
+
+             <div onclick="window.location.href='diffroses/pink.html'" >
+                <img id="cute" src="images/pink.jpg" alt="Image of Pink Rose" />
+             </div>
+
+             <div onclick="window.location.href='diffroses/yellow.html'">
+                <img id="cute" src="images/yellow.jpg" alt="Image of Yellow Rose"/>
+             </div>
+
+             <div onclick="window.location.href='diffroses/white.html'">
+                <img id="cute" src="images/white.jpg" alt="Image of White Rose"/>
+             </div>
+        </div>
+
     </body>
 </html>
