--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
         <link rel ="stylesheet" href="style.css"> 
     </head>
     <body>
-        <div class ="prebox">
-            <h1>roses</h1>
-        </div>
         <div class="box">
                 <div class="boxy">
             <h2>"A rose speaks the language of love, with every petal a whisper of the heart."</h2>
@@ -22,11 +19,15 @@
              yellow for friendship, and pink for admiration.
             </p>
                 </div>
-                    <video id ="vid" width="600" controls autoplay loop muted>
+                    <video id ="vid" width="700" controls autoplay loop muted>
                         <source src="pinkrose.mp4" type="video/mp4">
                     </video>
         </div>
+
+            <h3>types of roses</h3>
+
         <div class="images">
+            
             <div onclick="window.location.href='diffroses/red.html'">
                 <img id="cute" src="images/red.jpg" alt="Image of Red Rose"/>
              </div>
@@ -43,6 +44,11 @@
                 <img id="cute" src="images/white.jpg" alt="Image of White Rose"/>
              </div>
         </div>
-
+                <div class="sub">
+                    <p style="left: 1000px;">red for love</p>
+                    <p>pink for admiration</p>
+                    <p>yellow for friendship</p>
+                    <p>white for purity</p>
+                </div>
     </body>
 </html>
