--- a/diffroses/pink.html
+++ b/diffroses/pink.html
@@ -8,11 +8,21 @@
     <body class="font">
         <div class="header">
             <h1>Header Logo</h1>
+                <div class="header-links">
+                    <p>header link one</p>
+                    <p>header link two</p>
+                    <p>header link three</p>
+                </div>
         </div>
-        <div class="header-links">
-            <p>header link one</p>
-            <p>header link two</p>
-            <p>header link three</p>
+        <div class="hero">
+            <h2>This website is awesome</h2>
+            <p>This website has some subtext that goes here under the main title.
+                It's a smaller font and the color is lower contrast.
+            </p>
+            <button>Sign up</button>
+            <div>
+                <p> this is a placeholder for an image </p>
+            </div>
         </div>
     </body>
 </html>
