Changed button font to be bold

--- a/diffroses/pink.html
+++ b/diffroses/pink.html
@@ -19,7 +19,7 @@
             <p>This website has some subtext that goes here under the main title.
                 It's a smaller font and the color is lower contrast.
             </p>
-            <button>Sign up</button>
+            <button><strong>Sign Up</strong></button>
             <div>
                 <p> this is a placeholder for an image </p>
             </div>
