Further work on the hero section of website

--- a/diffroses/pink.html
+++ b/diffroses/pink.html
@@ -15,14 +15,16 @@
                 </div>
         </div>
         <div class="hero">
-            <h2>This website is awesome</h2>
-            <p>This website has some subtext that goes here under the main title.
-                It's a smaller font and the color is lower contrast.
-            </p>
-            <button><strong>Sign Up</strong></button>
-            <div>
-                <p> this is a placeholder for an image </p>
+            <div class="heya">
+                <h2>This website is awesome</h2>
+                    <p>This website has some subtext that goes here under the main title.
+                    It's a smaller font and the color is lower contrast.
+                    </p>
+                         <button><strong>Sign Up</strong></button>
             </div>
         </div>
+                <div>
+                    <p> this is a placeholder for an image </p>
+                </div>
     </body>
 </html>
