Adding a header to the website
Used all the code and styling from pink.html to add a header to index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
         <link rel ="stylesheet" href="style.css"> 
     </head>
     <body>
+        <div class="header">
+            <h1>Header Logo</h1>
+                <div class="header-links">
+                    <p>header link one</p>
+                    <p>header link two</p>
+                    <p>header link three</p>
+                </div>
+        </div>
         <div class="box">
                 <div class="boxy">
             <h2>"A rose speaks the language of love, with every petal a whisper of the heart."</h2>
@@ -18,6 +26,7 @@
              Different colors of roses also came to symbolize various emotions—red for love, white for purity, 
              yellow for friendship, and pink for admiration.
             </p>
+            <button><strong><em>Buy Now</em></strong></button>
                 </div>
                     <video id ="vid" width="700" controls autoplay loop muted>
                         <source src="pinkrose.mp4" type="video/mp4">
@@ -45,7 +54,7 @@
              </div>
         </div>
                 <div class="sub">
-                    <p style="left: 1000px;">red for love</p>
+                    <p>red for love</p>
                     <p>pink for admiration</p>
                     <p>yellow for friendship</p>
                     <p>white for purity</p>
